# files2db

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  coverage.lcov  environment.yml  parameters  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: branch_protection.yml  lint.yml  python-tests.yml
Archive/: ExtractAllData.py  RunApp.py  data_management.py  mainscript.py  printconsole.py
Archive/old_test/: TestNormAuto.py
DataGenerated/: AllID_2025-05-31_raw.csv
archive/: ExtractAllData.py  RunApp.py  data_management.py  mainscript.py  mongodb.py  null_values.py  printconsole.py  set_operation.py  settings.py  test_all_modify.py  test_set_operation.py  tkinter_gui.py
archive/old_test/: NormAuto.py  TestNormAuto.py  __init__.py  script_for_testing.py
files2db/: __init__.py  cli.py  main.py
files2db/data/: file_orga.csv
files2db/data_mg/: __init__.py  convert.py  data_convert.py  data_iterate.py  data_norm.py  data_process.py  data_validate.py  main.py  norm_data.py  normdata2.py  normdata_old.py  string_management.py  utils.py
files2db/data_process/: null_values.py  set_operation.py
files2db/read_file/: data_read.py  orga_read.py
files2db/ui/: get_infos.py  print_infos.py
tests/: __init__.py  test_cli.py  test_convert.py  test_data_convert.py  test_data_process.py  test_data_read.py  test_get_infos.py  test_iterate_file.py  test_main.py  test_norm_data.py  test_null_values.py  test_orga_read.py  test_set_operation.py  test_string_management.py  test_utils.py  test_validate.py
tests/test_dataset/: FichierTestBaseDonnees.xlsx  Files.csv  Formats.csv  RepTest_correct.xlsx  RepTest_wrong.xlsx  TestNorm.xlsx  field_rules.csv  fields.csv  fields_orga.csv  files.csv  orga.csv  values.csv  values_map.csv  wrong_orga.csv
tests/test_dataset/files/: expected.csv  fileA.xlsx  fileC.csv  fileD.csv
tests/test_dataset/test1/: expected.csv  field_rules.csv  fileA.xlsx  fileB.csv  fileC.csv  fileD.csv  files.csv  files_error_meta.csv  orga.csv
tests/test_dataset/test2/: expected.csv  field_rules.csv  file_complex.csv  files.csv  orga.csv  values_map.csv
