[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "files2db"

[project.scripts]
files2db = "files2db.cli:main"

[tool.setuptools.package-data]
"files2db" = ["data/file_orga.csv"]

[tool.setuptools.dynamic]
version = {file = "files2db/__version__.py"}

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/data", "archive"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle: code style errors
  "F",    # pyflakes: logical errors
  "I",    # isort: import sorting
  "B",    # flake8-bugbear: common bugs and design issues
  "UP",   # pyupgrade: modern Python syntax
  "N",    # pep8-naming: naming conventions
  "C90",  # mccabe: cyclomatic complexity
]   
