[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "files2db"
dynamic = ["version"]
description = "A tool to normalize and combine flat files into a database."
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2.0,<2.3.0",
    "xlrd",
    "openpyxl",
    "typer>=0.16.0,<0.17.0"
]
authors = [{ name = "Louis Le Nézet", email = "louislenezet@gmail.com" }]
maintainers = [{ name = "Louis Le Nézet", email = "louislenezet@gmail.com" }]
keywords = ["data processing", "file normalization", "database"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.scripts]
files2db = "files2db.cli:app"

[tool.setuptools.packages.find]
include = ["files2db*"]

[tool.setuptools.package-data]
"files2db" = ["data/file_orga.csv"]

[tool.setuptools.dynamic]
version = {attr = "files2db.__version__"}

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/data"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle: code style errors
  "F",    # pyflakes: logical errors
  "I",    # isort: import sorting
  "B",    # flake8-bugbear: common bugs and design issues
  "UP",   # pyupgrade: modern Python syntax
  "N",    # pep8-naming: naming conventions
  "C90",  # mccabe: cyclomatic complexity
]
